<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/dialog_aa_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:drawableStart="@drawable/ic_user_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/login_prompt_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/dialog_aa_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_aa_et_name"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:drawableStart="@drawable/ic_password_28"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/login_prompt_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/dialog_aa_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_aa_et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/dialog_aa_rb_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/administrator"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/dialog_aa_rb_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/purchase"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/dialog_aa_rb_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/shipment"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/dialog_aa_rb_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:checked="true"
            android:text="@string/checker"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/dialog_aa_tv_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_aa_rg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:text="@string/dialog_ac_uid_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_warning_28" />

    <TextView
        android:id="@+id/dialog_aa_tv_uid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_aa_tv_warning"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_uid_30_21"
        tools:text="8c9c75d1-9e6c-47b6-a240-7e028b9e6a36" />


</RelativeLayout>