<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order.detail.OrderDetailFragment">

    <TextView
        android:id="@+id/order_detail_tv_title"
        style="@style/primary_title"
        android:layout_alignParentStart="true"
        android:padding="16dp"
        android:text="@string/order_detail_title"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/order_detail_btn_delete"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@+id/order_detail_tv_title"
        android:background="@drawable/bg_button_off"
        android:text="@string/details_delete"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/order_detail_btn_save"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button_on"
        android:text="@string/details_save"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/order_detail_tv_name"
        style="@style/tv_details_info"
        android:layout_below="@id/order_detail_tv_title"
        android:layout_marginTop="16dp"
        app:drawableLeftCompat="@drawable/ic_goods_24"
        tools:text="Long Goods Test" />

    <TextView
        android:id="@+id/order_detail_tv_inventory"
        style="@style/tv_details_info"
        android:layout_below="@id/order_detail_tv_name"
        app:drawableLeftCompat="@drawable/ic_warehouse_24"
        tools:text="10086" />

    <TextView
        android:id="@+id/order_detail_tv_number"
        style="@style/tv_details_info"
        android:layout_below="@id/order_detail_tv_inventory"
        app:drawableLeftCompat="@drawable/ic_number_20"
        tools:text="10086" />

    <TextView
        android:id="@+id/order_detail_tv_date"
        style="@style/tv_details_info"
        android:layout_below="@id/order_detail_tv_number"
        app:drawableLeftCompat="@drawable/ic_date_24"
        tools:text="2021-06-08" />

    <TextView
        android:id="@+id/order_detail_tv_state"
        style="@style/tv_details_info"
        android:layout_below="@id/order_detail_tv_date"
        app:drawableLeftCompat="@drawable/ic_order_state_24"
        tools:text="完成" />

    <ImageView
        android:id="@+id/order_detail_iv_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/order_detail_tv_number"
        android:layout_alignBottom="@+id/order_detail_tv_number"
        android:layout_toEndOf="@+id/order_detail_tv_number"
        android:contentDescription="@string/order_detail_desc_modify"
        android:padding="8dp"
        android:src="@drawable/ic_modify_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/order_detail_btn_shortage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:background="@drawable/bg_button_blue"
            android:clickable="false"
            android:text="@string/details_shortage"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/order_detail_btn_revoke"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_warning"
            android:text="@string/order_detail_revoke"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/order_detail_btn_ensure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_on"
            android:text="@string/order_detail_ensure"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</RelativeLayout>