<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.goods.details.DetailsFragment">

    <TextView
        android:id="@+id/details_tv_title"
        style="@style/primary_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/details_btn_delete"
        android:padding="16dp"
        android:text="@string/goods_info_info"
        tools:ignore="RelativeOverlap" />


    <Button
        android:id="@+id/details_btn_save"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button_on"
        android:text="@string/details_save"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/details_btn_delete"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/details_btn_save"
        android:layout_alignBottom="@+id/details_btn_save"
        android:layout_marginStart="16dp"
        android:layout_toStartOf="@+id/details_btn_save"
        android:background="@drawable/bg_button_off"
        android:text="@string/details_delete"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/details_tv_name"
        style="@style/tv_details_info"
        android:layout_below="@id/details_tv_title"
        app:drawableLeftCompat="@drawable/ic_goods_24"
        tools:text="Long Goods Test" />

    <TextView
        android:id="@+id/details_tv_id"
        style="@style/tv_details_info"
        android:layout_below="@id/details_tv_name"
        app:drawableLeftCompat="@drawable/ic_id_24"
        tools:text="10086" />

    <TextView
        android:id="@+id/details_tv_inventory"
        style="@style/tv_details_info"
        android:layout_below="@id/details_tv_id"
        app:drawableLeftCompat="@drawable/ic_warehouse_24"
        tools:text="10086" />

    <TextView
        android:id="@+id/details_tv_sold"
        style="@style/tv_details_info"
        android:layout_below="@id/details_tv_inventory"
        app:drawableLeftCompat="@drawable/ic_shop_24"
        tools:text="10086" />


    <TextView
        android:id="@+id/details_tv_manufacturer"
        style="@style/tv_details_info"
        android:layout_below="@id/details_tv_sold"
        app:drawableLeftCompat="@drawable/ic_factory_24"
        tools:text="TextView TextView TextView TextView TextView TextView TextView " />

    <TextView
        android:id="@+id/details_tv_location"
        style="@style/tv_details_info"
        android:layout_below="@id/details_tv_manufacturer"
        app:drawableStartCompat="@drawable/ic_location_24"
        tools:text="TextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_tv_location"
        android:layout_marginStart="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/goods_tip"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_tips_24" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/details_btn_shortage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:background="@drawable/bg_button_on"
            android:clickable="false"
            android:text="@string/details_shortage"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/details_btn_purchase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_off"
            android:clickable="false"
            android:text="@string/details_purchase"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/details_btn_shipment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_off"
            android:clickable="false"
            android:text="@string/details_shipment"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</RelativeLayout>