<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.goods.search.SearchFragment">

    <SearchView
        android:id="@+id/search_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:imeOptions="actionSearch"
        android:queryHint="@string/search_hint"
        android:layout_margin="16dp"
        android:background="@drawable/bg_search" />

    <RadioGroup
        android:id="@+id/search_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

            <RadioButton
                android:id="@+id/search_rb_purchase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/search_purchase"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/search_rb_shipment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/search_shipment"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/search_rb_shortage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:checked="true"
                android:gravity="center"
                android:text="@string/search_shortage"
                android:textSize="18sp"
                android:textStyle="bold" />
    </RadioGroup>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/search_swipe_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>